# os

./: .gitignore
lab1/: CMakeLists.txt
lab1/scripts/: build.cmd  build.sh
lab1/src/: main
lab2/: CMakeLists.txt
lab2/include/: process_runner.h
lab2/src/: process_runner.cpp
lab2/test/: test_runner.cpp
lab3/: CMakeLists.txt  log.txt
lab3/include/: counter.h  logger.h  spawn.h
lab3/src/: counter.cpp  logger.cpp  main.cpp  spawn.cpp
lab4/: README.md
lab4/src/: logger  logger.cpp  simulator
lab5/: .gitignore  README.md  build.bat  build.sh  run.bat  run.sh
lab5/src/: index.html  logger.cpp  script.js  server.cpp  simulator.cpp  style.css
lab6/: CMakeLists.txt  build.sh  run_gui.sh
lab6/src/: temperature_gui.cpp
